# rust_microservice

./: Cargo.toml
src/: error.rs  main.rs
src/web/: routes_login.rs
tests/: quick_dev.rs
