[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# axum
axum = "0.6.20"
tower-http = { version = "0.4", features = ["fs"] }
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.5"
